# MyAnyAndVariant

./: CMakeLists.txt  README.md  main.cpp  my_any.h  test.cpp
